2018-07-03  Werner Lemberg  <wl@gnu.org>

	Fix some clang warnings.

	* graph/grfill.c (grFillRect): Use `int' for `size'.

	* src/ftstring.c (flower_init): Use `unsigned int' for `i'.
	Simplify some loops.

	* src/ftview.c (parse_cmdline) <'L'>: Use `unsigned char' casts.
	(main): Add `FT_LcdFilter' cast.

2018-07-02  Hugh McMaster  <hugh.mcmaster@outlook.com>

	Fix memory leak (patch #9666).

	* src/ftcommon.c (FTDemo_Install_Font): Always free
	`font->filepathname'.

2018-07-02  Werner Lemberg  <wl@gnu.org>

	* src/ftview.c (Render_All): Update `FT_Get_Color_Glyph_Layer' call.

	The function's signature was changed on 2018-07-02.

2018-06-30  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Implement string shifts.

	* src/ftstring.c (event_center_change): New function.
	(Process_Event): Shift the string with left-right arrows, rotate it
	with F5-F6.
	(event_help): Document it.

2018-06-30  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftcommon.c (FTDemo_Get_Index): Handle `FT_ENCODING_ORDER'.

	* src/ftcommon.c (FTDemo_Draw_Header, FTDemo_String_Set),
	src/ftview.c (Render_{All,Stroke,Fancy}),
	src/ftgrid.c (grid_status_draw_outline): Simplified accordingly.

2018-06-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Ditch gamma ramp.

	* src/ftstring.c (status): `gamma_ramp' removed.
	(gamma_ramp_draw): Remove.
	(event_gamma_change): Remove setting `gamma_ramp'.

	* src/ftstring.1: Mention stress test glyphs.

2018-06-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid, ftview, ftstring] Update font and encoding handling.

	* src/ftcommon.c (my_face_requester): Check `cmap_index' range.
	(FTDemo_Install_Font): `cmap_index' obeys `handle->encoding' here,
	and postpone setting `num_indices'.
	(FTDemo_Set_Current_Font): `handle->encoding' obeys `cmap_index' here,
	also set `num_indices' accordingly.

	* src/ftview.c (event_encoding_change): Simplify by calling
	`FTDemo_Set_Current_Font'.
